Week 9 Day 1 Complete

--- a/Module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
+++ b/Module-3/01_Intro_HTML_CSS/student-exercise/fan-page/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,26 @@
     <title>Jason Statham Fan Page</title>
     <link href="../fan-page/CSS/styles.css" rel="stylesheet" />
 </head>
+
 <body>
     <header>
         <h1>Jason Statham Fan Club</h1>
-        <p>Welcome to the Jason Statham fan club!</p>       
+        <p>Welcome to the Jason Statham fan club!</p>
     </header>
     <nav>
         <a href="../info-form/index.html">Info Form</a>
     </nav>
     <main>
         <img src="../img/The-Transporter-3.jpg" alt="">
-        <h2>Notable Appearances</h2>
+
         <section>
-            <h3>Movies</h3>
+            <h2><em>Notable Appearances</em></h2>
             <table>
                 <thead>
-                    <th>Movie</th>
-                    <th>Release Date</th>
+
+                    <th><strong>Movie</strong></th>
+                    <th><strong>Release Date</strong></th>
+
                 </thead>
 
                 <tr>
@@ -47,12 +51,26 @@
                     <td>The Transporter</td>
                     <td>2002</td>
                 </tr>
-
-
             </table>
-        </section>        
+        </section>
+        <section>
+             <em><h2>Best Quotes</h2>
+          
+            <p>A lot of action movies today seem to have scenes that just lead up to the action.</p>
+            <p>The thing about the UK is we don't really make that many great movies.</p>
+            <p>I used to play a lot of racket sports, tennis and squash.
+            </p>
+            </em>
+        </section>
+        <section>
+            <h2><em> Links   </em></h2>
+            <a id="wiki" href="https://en.wikipedia.org/wiki/Jason_Statham">Wikipedia Page</a>
+            <a id="imdb" href="https://www.imdb.com/name/nm0005458/">IMDB Jason Statham</a>
+        </section>
     </main>
 
 
+
 </body>
+
 </html>
