--- a/Module-3/08_DOM/student-lecture/product-reviews/index.html
+++ b/Module-3/08_DOM/student-lecture/product-reviews/index.html
@@ -16,7 +16,7 @@
         <p class="description">{insert description here}</p>
 
         <!-- reviews go here -->
-        <div class="review">
+        <!-- <div class="review">
             <h4>{insert reviewer here}</h4>
             <div class="rating">
                 {Loop here for stars}
@@ -30,7 +30,7 @@
                 Aenean nec lorem. In porttitor. Donec laoreet nonummy augue.
                 Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy.
                 }</p>
-        </div>
+        </div> -->
         <!-- reviews go here -->
 
     </div>
